--- a/public/index.html
+++ b/public/index.html
@@ -1,192 +1,158 @@
 <!DOCTYPE html>
 
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
+
+<head>
+    <meta charset="utf-8" />
     <title>FoodyPoint-LOGIN</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-body{
-  margin: 0;
-  padding: 0;
-  background: rgb(239, 209, 170);
-  height: 100vh;
-  overflow: hidden;
-}
-.center{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  background: white;
-  border-radius: 10px;
-  box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
-}
-.center h1{
-  text-align: center;
-  padding: 20px 0;
-  border-bottom: 1px solid silver;
-}
-.center form{
-  padding: 0 40px;
-  box-sizing: border-box;
-}
-form .txt_field{
-  position: relative;
-  border-bottom: 2px solid #adadad;
-  margin: 30px 0;
-}
-.txt_field input{
-  width: 100%;
-  padding: 0 5px;
-  height: 40px;
-  font-size: 16px;
-  border: none;
-  background: none;
-  outline: none;
-}
-.txt_field label{
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  color: #adadad;
-  transform: translateY(-50%);
-  font-size: 16px;
-  pointer-events: none;
-  transition: .5s;
-}
-.txt_field span::before{
-  content: '';
-  position: absolute;
-  top: 40px;
-  left: 0;
-  width: 0%;
-  height: 2px;
-  background: #2691d9;
-  transition: .5s;
-}
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
-  top: -5px;
-  color: #2691d9;
-}
-.txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
-  width: 100%;
-}
-.pass{
-  margin: -5px 0 20px 5px;
-  color: #a6a6a6;
-  cursor: pointer;
-}
-.pass:hover{
-  text-decoration: underline;
-}
-input[type="submit"]{
-  width: 100%;
-  height: 50px;
-  border: 1px solid;
-  background: #2691d9;
-  border-radius: 25px;
-  font-size: 18px;
-  color: #e9f4fb;
-  font-weight: 700;
-  cursor: pointer;
-  outline: none;
-}
-input[type="submit"]:hover{
-  border-color: #2691d9;
-  transition: .5s;
-}
-.signup_link{
-  margin: 30px 0;
-  text-align: center;
-  font-size: 16px;
-  color: #666666;
-}
-.signup_link a{
-  color: black;
-  text-decoration: none;
-}
-.signup_link a:hover{
-  text-decoration: underline;
-}
+        @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-    </style>
-    <style>
-      .main {
-    padding: 20px;
-    font-family: 'Helvetica', serif;
-    box-shadow: 5px 5px 7px 5px #888888;
-}
+        .login-page {
+            width: 360px;
+            padding: 8% 0 0;
+            margin: auto;
+        }
 
-.main h1 {
-    font-size: 40px;
-    text-align: center;
-    font-family: 'Helvetica', serif;
-}
+        .form {
+            position: relative;
+            z-index: 1;
+            background: linear-gradient(90deg,
+                    rgb(95, 96, 94) 0%,
+                    rgb(99, 150, 99) 50%);
+            max-width: 360px;
+            margin: 0 auto 100px;
+            padding: 45px;
+            text-align: center;
+            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2),
+                0 5px 5px 0 rgba(0, 0, 0, 0.24);
+        }
 
-input {
-    font-family: 'Helvetica', serif;
-    width: 100%;
-    font-size: 20px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    border: none;
-    border-bottom: 2px solid #767474;
-}
+        .form input {
+            font-family: "Roboto", sans-serif;
+            outline: 0;
+            background: #f2f2f2;
+            width: 100%;
+            border: 0;
+            margin: 0 0 15px;
+            padding: 15px;
+            box-sizing: border-box;
+            font-size: 14px;
+        }
 
-input[type=submit] {
-    font-family: 'Helvetica', serif;
-    width: 100%;
-    background-color: #2691d9;
-    border: none;
-    color: black;
-    padding: 16px 32px;
-    margin: 4px 2px;
-    border-radius: 10px;
-}
+        .form button {
+            font-family: "Roboto", sans-serif;
+            text-transform: uppercase;
+            outline: 0;
+            background: #4caf50;
+            width: 100%;
+            border: 0;
+            padding: 15px;
+            color: #ffffff;
+            font-size: 14px;
+            -webkit-transition: all 0.3 ease;
+            transition: all 0.3 ease;
+            cursor: pointer;
+        }
+
+        .form button:hover,
+        .form button:active,
+        .form button:focus {
+            background: #43a047;
+        }
+
+        .form .message {
+            margin: 15px 0 0;
+            color: #b3b3b3;
+            font-size: 12px;
+        }
+
+        .form .message a {
+            color: #4caf50;
+            text-decoration: none;
+        }
+
+        .form .register-form {
+            display: none;
+        }
+
+        .container {
+            position: relative;
+            z-index: 1;
+            max-width: 300px;
+            margin: 0 auto;
+        }
+
+        .container:before,
+        .container:after {
+            content: "";
+            display: block;
+            clear: both;
+        }
+
+        .container .info {
+            margin: 50px auto;
+            text-align: center;
+        }
+
+        .container .info h1 {
+            margin: 0 0 15px;
+            padding: 0;
+            font-size: 36px;
+            font-weight: 300;
+            color: #1a1a1a;
+        }
+
+        .container .info span {
+            color: #4d4d4d;
+            font-size: 12px;
+        }
+
+        .container .info span a {
+            color: #000000;
+            text-decoration: none;
+        }
+
+        .container .info span .fa {
+            color: #ef3b3a;
+        }
+
+        body {
+            background: url('./image/mainbg.jpg');
+            /* fallback for old browsers */
+            
+            /* background: linear-gradient(90deg,
+                    rgba(141, 194, 111, 1) 0%,
+                    rgba(118, 184, 82, 1) 50%); */
+            font-family: "Roboto", sans-serif;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
     </style>
     <script src="login.js"></script>
-  </head>
-  <body>
+</head>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
+<body>
+    <div class="login-page">
+        <div class="form">
+            <form action="/page" method="POST">
+                <h1>Login Here</h1>
+                <input type="text" class="box" id="uname" name="uname" placeholder="Username" required />
+                <br />
 
-
-<div class="container">
-  <div class="row">
-      <div class="col-md-3">
-
-      </div>
-      <div class="col-md-6 main">
-          <form action="/page" method="POST">
-              <h1>Login Here</h1>
-              <input type="text" class="box" id="uname" name="uname" placeholder="Username" required />
-              <br>
-              
-              <input type="text" class="box" id="password" name="password" placeholder="Password" required />
-              <br>
-              <input type="submit" value="Submit" id="submit" />
-              <br>
-              <h4>Don't have an account?</h4>  <a href="signup.html" style="color: black">Signup</a>
-          </form>
-      </div>
-      <div class="col-md-3">
-      </div>
-  </div>
-</div>
+                <input type="text" class="box" id="password" name="password" placeholder="Password" required />
+                <br />
+                <input type="submit" value="Submit" id="submit" />
+                <br />
+                <h4>Don't have an account?</h4>
+                <a href="signup.html" style="color: black"><b>Signup</b></a>
+            </form>
+        </div>
+    </div>
 </body>
+
 </html>
 
 <!DOCTYPE html>
