--- a/public/content.html
+++ b/public/content.html
@@ -121,6 +121,7 @@
         </ul>
         <div class="checkOut">
             <div class="total">0</div>
+            <div class="PlaceOrdered">Order Now</div>
             <div class="closeShopping">Close</div>
         </div>
     </div>
