--- a/public/Order.html
+++ b/public/Order.html
@@ -55,7 +55,7 @@
         
         <div class="back-to-home">
             <p>Want to place another order?</p>
-            <a href="./content.html">Back to Home</a>
+            <a href="content.html">Back to Home</a>
         </div>
     </div>
 
