--- a/public/content.html
+++ b/public/content.html
@@ -121,7 +121,7 @@
         </ul>
         <div class="checkOut">
             <div class="total">0</div>
-            <div class="PlaceOrdered"><a href="./Order.html">Order Now</a></div>
+            <div class="PlaceOrdered"><a href="Order.html">Order Now</a></div>
             <div class="closeShopping">Close</div>
         </div>
     </div>
