--- a/public/feedback.html
+++ b/public/feedback.html
@@ -154,6 +154,16 @@ input[type=submit] {
     margin: 4px 2px;
     border-radius: 10px;
 }
+
+.back-to-home {
+            margin-top: 30px;
+        }
+
+        .back-to-home a {
+            text-decoration:underline;
+            color: #3a444c;
+            font-weight: bold;
+        }
     </style>
     <script src="login.js"></script>
   </head>
@@ -178,6 +188,10 @@ input[type=submit] {
                     <br>
                     <input type="submit" value="Submit" id="submit" />
                 </form>
+
+                <div class="back-to-home">
+                  <a href="content.html">Back to Home</a>
+              </div>
             </div>
             <div class="col-md-3">
             </div>
